--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,10 @@
 # Site
 title: 抹茶薄荷糖的小屋
 subtitle: '希望世界和平，天天下雨'
-description: '这是描述噢'
+description: '蠢? 说我吗?'
 keywords:
 author: 抹茶薄荷糖
-language: 'zh-CN'
+language: zh-Hans
 timezone: 'Asia/Shanghai'
 
 # URL
@@ -94,6 +94,11 @@ ignore:
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 theme: next
+search:
+  path: search.xml
+  field: post
+  format: html
+  limit: 10000
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
@@ -101,3 +106,24 @@ deploy:
   type: 'git'
   repository: 'git@github.com:Leafeer/Leafeer.github.io.git'
   branch: 'master'
+
+# live2d
+live2d:
+  enable: true
+  scriptFrom: local
+  pluginRootPath: live2dw/
+  pluginJsPath: lib/
+  pluginModelPath: assets/
+  tagMode: false
+  log: false
+  model:
+    use: live2d-widget-model-shizuku
+  display:
+    position: left
+    width: 150
+    height: 300
+    hOffset: 100
+    vOffset: -10
+  mobile:
+    show: true
+  react:
