--- a/package.json
+++ b/package.json
@@ -13,14 +13,21 @@
   },
   "dependencies": {
     "hexo": "^4.0.0",
+    "hexo-admin": "^2.3.0",
     "hexo-deployer-git": "^2.1.0",
+    "hexo-excerpt": "^1.1.6",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^1.0.0",
+    "hexo-generator-searchdb": "^1.3.0",
     "hexo-generator-tag": "^1.0.0",
+    "hexo-helper-live2d": "^3.1.1",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-marked": "^2.0.0",
     "hexo-renderer-stylus": "^1.1.0",
-    "hexo-server": "^1.0.0"
+    "hexo-server": "^1.0.0",
+    "hexo-wordcount": "^6.0.1",
+    "live2d-widget-model-shizuku": "^1.0.5",
+    "live2d-widget-model-wanko": "^1.0.5"
   }
 }
