--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -97,9 +97,9 @@ menu:
   about: /about/|| user
   tags: /tags/|| tags
   categories: /categories/|| th
-  #schedule: /schedule/|| calendar
-  #sitemap: /sitemap.xml|| sitemap
-  #commonweal: /404/|| heartbeat
+  schedule: /schedule/|| calendar
+  sitemap: /sitemap.xml|| sitemap
+  commonweal: /404/|| heartbeat
 
 # Enable/Disable menu icons.
 menu_icons:
@@ -126,9 +126,9 @@ scheme: Pisces
 # Key is the link label showing to end users.
 # Value before `||` delimeter is the target permalink.
 # Value after `||` delimeter is the name of FontAwesome icon. If icon (with or without delimeter) is not specified, globe icon will be loaded.
-#social:
-  #GitHub: https://github.com/yourname || github
-  #E-Mail: mailto:yourname@gmail.com || envelope
+social:
+  GitHub: https://github.com/Leafeer || github
+  E-Mail: mailto:leafeer@163.com || envelope
   #Google: https://plus.google.com/yourname || google
   #Twitter: https://twitter.com/yourname || twitter
   #FB Page: https://www.facebook.com/yourname || facebook
@@ -137,6 +137,8 @@ scheme: Pisces
   #YouTube: https://youtube.com/yourname || youtube
   #Instagram: https://instagram.com/yourname || instagram
   #Skype: skype:yourname?call|chat || skype
+  QQ: http://wpa.qq.com/msgrd?v=3&uin=610840268&site=qq&menu=yes || qq
+  Bilibili: https://space.bilibili.com/8291052 || tv
 
 social_icons:
   enable: true
@@ -217,7 +219,7 @@ excerpt_description: true
 # Please use <!-- more --> in the post to control excerpt accurately.
 auto_excerpt:
   enable: true
-  length: 150
+  length: 100
 
 # Post meta display settings
 post_meta:
@@ -242,14 +244,14 @@ post_wordcount:
   #description: ex. subscribe to my blog by scanning my public wechat account
 
 # Reward
-#reward_comment: Donate comment here
-#wechatpay: /images/wechatpay.jpg
-#alipay: /images/alipay.jpg
+# reward_comment: 老爷们都是最棒的！
+wechatpay: /images/wechatpay.jpg
+alipay: /images/alipay.jpg
 #bitcoin: /images/bitcoin.png
 
 # Declare license on posts
 post_copyright:
-  enable: false
+  enable: true
   license: CC BY-NC-SA 3.0
   license_url: https://creativecommons.org/licenses/by-nc-sa/3.0/
 
