--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,17 @@ timezone: 'Asia/Shanghai'
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
+
+# GitHub 配置
 # url: http://yoursite.com
 # root: /
-url: http://leafeer.gitee.io/
-root: ./
-permalink: :name/
+# permalink: :name/
+
+# gitee 配置
+url: https://leafeer.gitee.io/
+root: /
+permalink: :year/:month/:day/:title/
+
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
@@ -107,7 +113,7 @@ search:
 deploy:
   type: git
   # repository: git@github.com:Leafeer/Leafeer.github.io.git
-  repository: git@gitee.com:leafeer/leafeer.gitee.io.git
+  repository: https://gitee.com/leafeer/leafeer.git
   branch: master
 
 # live2d
